deployments/apps/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: apps
spec:
  selector:
    app: gitlab
  ports:
    - name: http
      port: 80
      targetPort: 80
