deployments/apps/gitlab/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitlab.homelab.local`)
      kind: Rule
      services:
        - name: gitlab
          port: 80
